Revision history for {{$dist->name}}

{{$NEXT}}

0.68_01   2019-01-05 21:12:47 -0500
  - Improve platform probing of complex type
  - Allow override of platform probing using FFI_PLATYPUS_PROBE_OVERRIDE

0.67_01   2019-01-05 09:16:22 -0500
  - Better support for complex types: pointers to complex types and complex
    type and pointers to complex as return value

0.66_01   2019-01-04 20:16:59 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for dynamic prereqs on windows
  - restore FFI_PLATYPUS_DEBUG_FAKE32
  - restore FFI_PLATYPUS_NO_ALLOCA

0.65_01   2019-01-04 13:38:58 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for parallel and freebsd build

0.64_01   2019-01-03 03:16:57 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker fixes for MSWin32 / cygwin

0.63_01   2019-01-02 11:23:48 -0500
  - EXPERIMENTAL ExtUtils::MakeMaker release

0.62_01   2019-01-01 04:23:23 -0500
  - New type: array of string "string [x]" and "string []" are supported
  - NULL terminated arrays are supported as return types for string and opaque arrays
    "opaque []" and "string []"

0.61_01   2018-12-31 19:56:20 -0500
  - New type: pointers to string "string *" are supported.
  - FFI::Platypus::Type::StringPointer is now deprecated.

0.60_01   2018-12-30 14:55:15 -0500
  - sticky/unstick functions can safely be called multiple times
  - Removed some extra lookups from closure calls, should be faster now.

0.59      2018-12-16 16:33:37 -0700
  - Workaround for possibly buggy pack/unpack on Perl 5.8.8 gh#91
    Fixes FFI::Platypus::Type::StringArray

0.58      2018-11-20 14:31:10 -0500
  - Add unstick method to FFI::Platypus::Closure

0.57_01   2018-11-04 15:36:33 -0500
  - Major refactor of the internals of the type system.  The API is
    the same but some type meta-data (which was never guaranteed
    to stay the same) may have changed.

    * The internal representation of types is much smaller (4 bytes
      for simple types), which can save a lot of memory if you have
      lots of types.