@@ -26,16 +26,19 @@ underscore_eval_version = 0
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   eval {
-diag_preamble = |     use Alien::FFI;
+diag_preamble = |     my $class = eval { require Alien::FFI; 1 }
+diag_preamble = |                 ? 'Alien::FFI'
+diag_preamble = |                 : do { require Alien::FFI::pkgconfig;
+diag_preamble = |                        'Alien::FFI::pkgconfig' };
 diag_preamble = |     use FFI::Platypus;
 diag_preamble = |     use FFI::Platypus::Memory;
-diag_preamble = |     diag "Alien::FFI version       = ", $Alien::FFI::VERSION;
-diag_preamble = |     diag "Alien::FFI->install_type = ", Alien::FFI->install_type;
-diag_preamble = |     diag "Alien::FFI->cflags       = ", Alien::FFI->cflags;
-diag_preamble = |     diag "Alien::FFI->libs         = ", Alien::FFI->libs;
-diag_preamble = |     diag "Alien::FFI->dist_dir     = ", eval { Alien::FFI->dist_dir } || 'undef';
-diag_preamble = |     diag "Alien::FFI->version      = ", eval { Alien::FFI->config('version') } || 'unknown';
-diag_preamble = |     diag "my_configure             = ", Alien::FFI->runtime_prop->{my_configure} if defined Alien::FFI->runtime_prop->{my_configure};
+diag_preamble = |     diag "$class version       = ", $class->VERSION;
+diag_preamble = |     diag "$class->install_type = ", $class->install_type;
+diag_preamble = |     diag "$class->cflags       = ", $class->cflags;
+diag_preamble = |     diag "$class->libs         = ", $class->libs;
+diag_preamble = |     diag "$class->dist_dir     = ", eval { $class->dist_dir } || 'undef';
+diag_preamble = |     diag "$class->version      = ", eval { $class->config('version') } || 'unknown';
+diag_preamble = |     diag "my_configure             = ", $class->runtime_prop->{my_configure} if defined $class->runtime_prop->{my_configure};
 diag_preamble = |     spacer();
 diag_preamble = |     require FFI::Platypus::ShareConfig;
 diag_preamble = |     my $share_config = 'FFI::Platypus::ShareConfig';
@@ -131,9 +134,12 @@ remove = Win32
 remove = Win32::Process
 remove = Win32API::File
 
+; optional !!
+remove = Alien::FFI
+remove = Alien::FFI::pkgconfig
+
 [Prereqs / ConfigurePrereqs]
 -phase = configure
-Alien::FFI = 0.20
 ExtUtils::MakeMaker = 7.12
 
 [Prereqs / BuildPrereqs]
@@ -143,7 +149,6 @@ ExtUtils::CBuilder = 0
 
 [Prereqs / TestPrereqs]
 -phase = test
-Alien::FFI = 0.012
 Capture::Tiny = 0
 
 [Prereqs]
